--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "ca.joshlarminay.sms-wrapped",
+  "name": "ca.joshlarminay.smswrapped",
   "displayName": "SMS-Wrapped",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite --port 8080",
 
-    "build:browser": "vue-tsc --noEmit && vite build",
-    "serve:browser": "npm run build:browser && http-server ./www -a localhost -p 8081 -o",
+    "build": "vue-tsc --noEmit && vite build",
 
-    "build:android:prepare": "cordova prepare",
+    "serve:browser": "npm run build && http-server ./www -a localhost -p 8081 -o",
+
+    "build:android": "npm run build && cordova build android --stacktrace",
+    "serve:android": "npm run build && cordova run android --device",
     
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "typecheck": "vue-tsc --noEmit"
